iac-kubernetes/manifest/codesativa/example/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-example-svc
  namespace: codesativa-system
spec:
  # type: ClusterIP
  selector:
    app: app-example
  ports:
    - name: http
      port: 80
      targetPort: 80
