iac-kubernetes/manifest/codesativa/example/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-example-ingress-route
  namespace: codesativa-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app1.local.gunturpoetra.com`)
      kind: Rule
      services:
        - name: app-example-svc
          namespace: codesativa-system
          port: 80
  tls:
    secretName: local-gunturpoetra-com-production-tls
